Add legend interaction RJ

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             </ul>
             <p class="about-description">It's a density-dot map that represents the population aged 25 or over by their highest level of education. <br>1 dot=10 people</p>
             <ul class="legend-container">
-                <li class="active" data-layer="pontos-superior"><span class="level-higher"></span>Undergraduate / graduate degrees</li>
-                <li class="active" data-layer="pontos-medio"><span class="level-high-school"></span>High school</li>
-                <li class="active" data-layer="pontos-fundamental"><span class="level-basic"></span>Basic education</li>
-                <li class="active" data-layer="pontos-incompleto"><span class="level-incomplete"></span>Incomplete basic education</li>
+                <li class="active" data-layer="superior"><span class="level-higher"></span>Undergraduate / graduate degrees</li>
+                <li class="active" data-layer="medio"><span class="level-high-school"></span>High school</li>
+                <li class="active" data-layer="fundamental"><span class="level-basic"></span>Basic education</li>
+                <li class="active" data-layer="incompleto"><span class="level-incomplete"></span>Incomplete basic education</li>
             </ul>
             <p class="about-links">
                 <a href="#">Read about the map here.</a>
