Change text dot-people

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li class="sao-paulo">São Paulo</li>
                 <li class="rio-janeiro">Rio de Janeiro</li>
             </ul>
-            <p class="about-description">It's a density-dot map that represents the population aged 25 or over by their highest level of education. <br>1 dot=10 people</p>
+            <p class="about-description">It's a density-dot map that represents the population aged 25 or over by their highest level of education. <br>At the highest zoom level 1 dot means 10 people.</p>
             <ul class="legend-container">
                 <li class="active" data-layer="superior"><span class="level-higher"></span>Undergraduate / graduate degrees</li>
                 <li class="active" data-layer="medio"><span class="level-high-school"></span>High school</li>
