add social meta data

--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Educational Attainment</title>
+
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@mappinglab">
+        <meta name="twitter:title" content="Educational Landscape">
+        <meta name="twitter:description" content="It's a density-dot map that represents the population aged 25 and over by their highest level of education in São Paulo and Rio de Janeiro Metropolitan Regions.">
+        <meta name="twitter:image" content="https://www.mappinglab.me/education-level/images/twitter.png">
+
+        <meta property="og:description" content="It's a density-dot map that represents the population aged 25 and over by their highest level of education in São Paulo and Rio de Janeiro Metropolitan Regions.">
+        <meta property="og:site_name" content="Mapping-lab">
+        <meta property="og:title" content="Educational Landscape">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://www.mappinglab.me/education-level/">
+        <meta property="og:image" content="https://www.mappinglab.me/education-level/images/fb.png">
+        <meta property="og:image:width" content="600">
+        <meta property="og:image:height" content="315">
+        <meta property="og:image" content="https://www.mappinglab.me/education-level/images/fb_2x.png">
+        <meta property="og:image:width" content="1200">
+        <meta property="og:image:height" content="630">
+
+        <title>Educational Landscape</title>
 
         <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 
@@ -16,12 +35,12 @@
     <body>
 
         <div class="about-box">
-            <h1>Educational attainment in<br>Metropolitan Regions</h1>
+            <h1>Educational landscape<br>of the adult population<br>in Metropolitan Regions</h1>
             <ul class="city-container">
                 <li class="sao-paulo">São Paulo</li>
                 <li class="rio-janeiro">Rio de Janeiro</li>
             </ul>
-            <p class="about-description">It's a density-dot map that represents the population aged 25 or over by their highest level of education.</p>
+            <p class="about-description">It's a density-dot map that represents the population aged 25 and over by their highest level of education.</p>
             <p class="about-dot">At the highest zoom level 1 dot means 10 people.</p>
             <ul class="legend-container">
                 <li class="active" data-layer="superior"><span class="level-higher"></span>Undergraduate / graduate degrees</li>
