Add embed medium

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
     <head>
         <meta charset="utf-8">
 
+        <link rel="alternate" type="application/json+oembed"
+        href="https://www.mappinglab.me/education-level/services/oembed.json"
+        title="Educational Landscape" />
+
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@mappinglab">
         <meta name="twitter:title" content="Educational Landscape">
