Add mapinglab header bar

--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
 
     </head>
     <body>
+        <div class="header-home">
+            <div class="links">
+                <ul>
+                    <li><a class="logo" href="http://www.mappinglab.me/"><img src="svg/logo.svg" alt="mapping-lab"></a></li>
+                    <li><a target="_blank" href="https://twitter.com/mappinglab"><img src="svg/icon_twitter.svg" onmouseover="this.src='svg/icon_twitter_hover.svg'" onmouseout="this.src='svg/icon_twitter.svg'" alt="Twitter"></a></li>
+                    <li><a href="mailto:hello@mappinglab.me"><img src="svg/icon_email.svg" onmouseover="this.src='svg/icon_email_hover.svg'" onmouseout="this.src='svg/icon_email.svg'" alt="Email"></a></li>
+                    <li><a target="_blank" href="https://medium.com/mappinglab"><img src="svg/icon_medium.svg" onmouseover="this.src='svg/icon_medium_hover.svg'" onmouseout="this.src='svg/icon_medium.svg'" alt="Medium"></a></li>
+                </ul>
+                </div>
+        </div>
 
         <div class="about-box">
             <h1>Educational landscape<br>of the adult population<br>in Metropolitan Regions</h1>
