Change medium link article

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <li class="active" data-layer="incompleto"><span class="level-incomplete"></span>Incomplete basic education</li>
             </ul>
             <p class="about-links">
-                <a href="https://medium.com/@mappinglab/educational-landscape-of-the-adult-population-in-metropolitan-regions-cccf39d7a3f8">Read about the map here.</a>
+                <a target="_blank" href="https://medium.com/@mappinglab/educational-landscape-of-the-adult-population-in-metropolitan-regions-cccf39d7a3f8">Read about the map here.</a>
             </p>
         </div>
 
