Fix mobile rendering

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <title>Educational Landscape</title>
 
-        <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+        <meta name="viewport" content="width=device-width">
 
         <script src="js/lib/jquery-3.2.0.min.js"></script>
         <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.37.0/mapbox-gl.js'></script>
